refactor: ClusterServiceRoleInstanceService complete 5/46